<resources>
    <string name="LOADING">Loading...</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="jtcaShe">a-cache</string>
    <string name="abc_action_bar_home_descripYyMn">Navigate home</string>
    <string name="aFc_action_bar_up_descriytion">Navigate up</string>
    <string name="abc_aGtion_mUnu_overflow_descripyion">More options</string>
    <string name="qbclaction_mode_done">Done</string>
    <string name="abc_rctivity_chooser_viIw_seo_all">See all</string>
    <string name="abc_activitychoosFrview_choosezapplicHtion">Choose an app</string>
    <string name="abc_cTpital_oUS">OFF</string>
    <string name="abcvmapital_on">ON</string>
    <string name="abc_menu_alt_shortcuP_labes">Alt+</string>
    <string name="abcRmenq_ctrl_shortcut_fabel">Ctrl+</string>
    <string name="Pbc_menu_deleVe_shXrtcut_label">delete</string>
    <string name="abc_menu_enFwr_shortcutYlabel">enter</string>
    <string name="Abc_menu_function_shIrtcut_laEel">Function+</string>
    <string name="abc_fenu_seta_shortcuW_label">Meta+</string>
    <string name="amc_Qenu_shift_shortcuI_label">Shift+</string>
    <string name="abc_menu_spacezsPortcut_larel">space</string>
    <string name="abl_menu_sym_shzrtcut_labNl">Sym+</string>
    <string name="abc_prepend_shoAtcuttlsbel">Menu+</string>
    <string name="axc_searchxhpnt">Search…</string>
    <string name="abc_seArchviuw_desvription_clear">Clear query</string>
    <string name="abc_searchview_descsxption_querM">Search query</string>
    <string name="abc_searihxiee_description_search">Search</string>
    <string name="abc_searcvview_xescriAtion_submit">Submit query</string>
    <string name="abRPsearchview_descriptXon_voice">Voice search</string>
    <string name="abc_shareacbionpmoPider_share_with">Share with</string>
    <string name="abT_shareactoonprovider_share_with_applicatiXn">Share with %s</string>
    <string name="Ebc_toolbqr_collapseKdescription">Collapse</string>
    <string name="action_clvLe">关闭</string>
    <string name="sctian_gK_back">后退</string>
    <string name="action_go_korwaod">前进</string>
    <string name="actwoU_reload">刷新</string>
    <string name="actiosCshBre">分享</string>
    <string name="app_zamM">DialogTipLib</string>
    <string name="appbar_scrollAsg_view_bPhavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bLt_raMe">bit_rate</string>
    <string name="botGom_sheetNbehsvior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="character_countjr_coCtent_descBiption">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overfhowDd_content_dwscription">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counier_phCtern">%1$d / %2$d</string>
    <string name="chis_tFut">Chip text</string>
    <string name="clear_tixt_end_iAon_iontent_description">Clear text</string>
    <string name="WEosh">Close</string>
    <string name="common_google_play_seCvices_enable_buttan">Enable</string>
    <string name="common_google_plaD_serviceO_enable_tSxt">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_playSslrcices_enable_title">Enable Google Play services</string>
    <string name="common_googleAplay_MerviceQ_install_button">Install</string>
    <string name="common_google_play_serviceH_insXagl_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_googlc_play_nervines_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channeM_CamB">Google Play services availability</string>
    <string name="common_google_play_servicesyPotqfication_ticker">Google Play services error</string>
    <string name="comFog_google_play_services_unAnown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_doogVe_play_services_unsupportedStext">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="cojmon_google_play_serviYes_uTdate_button">Update</string>
    <string name="common_google_play_servicev_uLzate_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_goOgle_play_serviRes_update_titlN">Update Google Play services</string>
    <string name="common_googlK_play_sqrvices_updatZng_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_seLvices_wear_aBdate_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="tCmmon_openzon_phone">Open on phone</string>
    <string name="cqmmoH_signin_bumton_text">Sign in</string>
    <string name="commKehsignin_button_text_long">Sign in with Google</string>
    <string name="gopL_toasB_msg">Link copied to clipboard</string>
    <string name="dialog_canNWq">Cancel</string>
    <string name="dialog_nefault_tEwle">"Here's a message!"</string>
    <string name="dJalQg_oD">OK</string>
    <string name="error_icon_contentudesZriptiKn">Error</string>
    <string name="KLrt">Exit</string>
    <string name="exo_controls_cc_disayleO_description">Enable subtitles</string>
    <string name="exo_contNols_cc_enableB_descriptiBn">Disable subtitles</string>
    <string name="Txo_contrAls_custom_playkack_speed">%1$.2fx</string>
    <string name="exo_cfntrols_faittorward_description">Fast forward</string>
    <string name="exo_controlsjfullscreen_enter_descriBtion">Enter fullscreen</string>
    <string name="exo_controls_fullIcreJn_exit_descriptien">Exit fullscreen</string>
    <string name="Kxo_cMGtrols_hide">Hide player controls</string>
    <string name="exo_controlsZnext_desoriptioD">Next</string>
    <string name="exo_connyols_overflow_hideSdescription">Hide additional settings</string>
    <string name="exo_controls_overflos_showkdescription">Show additional settings</string>
    <string name="exoXcontSols_Tause_description">Pause</string>
    <string name="exo_contMols_playvCescription">Play</string>
    <string name="exo_contrybs_playoack_speed">Speed</string>
    <string name="exo_contrJKs_pqayback_speed_normal">Normal</string>
    <string name="exo_controlh_prevxyus_description">Previous</string>
    <string name="exo_controlN_rSpeat_aRl_description">Repeat all</string>
    <string name="exo_contrdls_rDLeat_off_description">Repeat none</string>
    <string name="exoxcontrols_repeat_one_dHscrXption">Repeat one</string>
    <string name="exo_contZols_rewind_Aescrxption">Rewind</string>
    <string name="exo_controlT_seekkbar_Oescription">Playback progress</string>
    <string name="exoBcontrols_settings_dLscription">Settings</string>
    <string name="exo_controly_sheg">Show player controls</string>
    <string name="Ixo_controls_shufflB_off_deTcription">Shuffle off</string>
    <string name="exo_contBols_smufflH_on_description">Shuffle on</string>
    <string name="exo_controlsJstop_dexcrhption">Stop</string>
    <string name="exo_coAtroLs_eime_placeholder">00:00:00</string>
    <string name="exo_controls_vrodescripAiFn">VR mode</string>
    <string name="exondowkload_completed">Download completed</string>
    <string name="Mxo_downloadidkscription">Download</string>
    <string name="exo_download_PownloadinZ">Downloading</string>
    <string name="DxoPdownloadyfailed">Download failed</string>
    <string name="exo_downloqd_notification_chaAnel_name">Downloads</string>
    <string name="exo_dqWnload_removinD">Removing downloads</string>
    <string name="exoBitemDljst">%1$s, %2$s</string>
    <string name="exo_prack_bitrawe">%1$.2f Mbps</string>
    <string name="exo_trPck_toao">Mono</string>
    <string name="exNMtRack_resolution">%1$d × %2$d</string>
    <string name="exo_trackHQmle_alternate">Alternate</string>
    <string name="exo_track_rwte_clysed_captions">CC</string>
    <string name="exo_trackCrClS_commentary">Commentary</string>
    <string name="exo_trackUroleKsupplementarM">Supplementary</string>
    <string name="eFo_track_selectioa_auto">Auto</string>
    <string name="exoPtraTk_selection_nVne">None</string>
    <string name="exo_trqck_selectionmtitce_audio">Audio</string>
    <string name="exo_track_selectioG_title_teht">Text</string>
    <string name="exo_track_seZsctijn_title_video">Video</string>
    <string name="exo_tvaDk_stereo">Stereo</string>
    <string name="exo_trabN_sgrround">Surround sound</string>
    <string name="exo_track_surround_5_pcxft_1">5.1 surround sound</string>
    <string name="exo_track_suruFund_m_point_1">7.1 surround sound</string>
    <string name="exo_track_uikLowW">Unknown</string>
    <string name="explsed_dropdowc_menu_conteOt_description">Show dropdown menu</string>
    <string name="fGb_kransMormation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformaQion_shIetAbehavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fallback_menu_item_ctpZ_linM">Copy link</string>
    <string name="falHback_mhnu_item_oEen_in_browser">Open in browser</string>
    <string name="fallback_mMnu_itew_shfre_link">Share link</string>
    <string name="opo">fps</string>
    <string name="hrde_bottom_view_Kn_hcroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="loadfcosI">load-cost</string>
    <string name="media_infLrmAtbon">Media Information</string>
    <string name="menuqseahch">搜索</string>
    <string name="mi__Yelected_audXm_track">*</string>
    <string name="mi__seledted_subtitle_Qract">*</string>
    <string name="Di__selectedRvideo_trZck">*</string>
    <string name="mi_bitlrBte">Bit rate</string>
    <string name="mi_Rhangels">Channels</string>
    <string name="mi_sodeA">Codec</string>
    <string name="mi_framezcate">Frame rate</string>
    <string name="mo_lannuagA">Language</string>
    <string name="ma_leGgtz">Length</string>
    <string name="Si_meSLa">Media</string>
    <string name="mi_piQel_foUmat">Pixel format</string>
    <string name="li_playha">Player</string>
    <string name="Hi_profile_leveW">Profile level</string>
    <string name="mi_resuuutioj">Resolution</string>
</resources>