<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:appcompat="http://schemas.android.com/apk/res-auto" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@id/action_go_back" android:orderInCategory="100" android:title="@string/sctian_gK_back" android:onClick="goBackButtonClicked" app:showAsAction="never" />
    <item android:id="@id/action_go_forward" android:orderInCategory="101" android:title="@string/action_go_korwaod" android:onClick="goForwardButtonClicked" app:showAsAction="never" />
    <item android:id="@id/action_share" android:orderInCategory="102" android:title="@string/actiosCshBre" android:onClick="shareButtonClicked" app:showAsAction="never" />
    <item android:id="@id/action_reload" android:orderInCategory="103" android:title="@string/actwoU_reload" android:onClick="reloadButtonClicked" app:showAsAction="never" />
    <item android:id="@id/action_close" android:orderInCategory="104" android:title="@string/action_clvLe" android:onClick="closeButtonClicked" app:showAsAction="never" />
    <item android:id="@id/menu_search" android:visible="false" android:title="@string/menuqseahch" app:actionViewClass="android.widget.SearchView" app:showAsAction="ifRoom|withText" />
</menu>